--- a/_config.yml
+++ b/_config.yml
@@ -9,14 +9,13 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
-author: David Freeman # add your name
+author: Phil Loatman # add your name
 author-img: david-freeman.jpg # add your photo
 about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
-social-twitter: # add your Twitter handle
-social-facebook: # add your Facebook handle
-social-github: artemsheludko # add your Github handle
-social-linkedin: # add your Linkedin handle
-social-email: # add your Email address
+social-twitter: philliploatman
+social-github: LoatmanP # add your Github handle
+social-linkedin: philloatman
+social-email: # loatmanp@gmail.com
 
 # Disqus
 discus-identifier: mr-brown # add your discus identifier
