--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Hello, world! I'm David Freeman
+title: Phil Loatman, PhD
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -11,11 +11,13 @@ site-twitter: #if your site has a twitter account, enter it here
 # Author Settings
 author: Phil Loatman # add your name
 author-img: david-freeman.jpg # add your photo
-about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
+about-author: I am currently a Senior Data Scientist for Lincoln Financial Group working within financial management. My research interests include cognitive science, judgment and decision making, experimental/behavioral economics, quantitative finance, and computational modeling. I have a PhD in Cognitive Science from Stony Brook University with advanced certification in Quantitative Analyses.
+
+ # add description
 social-twitter: philliploatman
 social-github: LoatmanP # add your Github handle
 social-linkedin: philloatman
-social-email: # loatmanp@gmail.com
+social-email: loatmanp@gmail.com
 
 # Disqus
 discus-identifier: mr-brown # add your discus identifier
