--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
-author: Phil Loatman # add your name
+author: Phil Loatman, PhD # add your name
 author-img: david-freeman.jpg # add your photo
 about-author: I am currently a Senior Data Scientist for Lincoln Financial Group working within financial management. My research interests include cognitive science, judgment and decision making, experimental/behavioral economics, quantitative finance, and computational modeling. I have a PhD in Cognitive Science from Stony Brook University with advanced certification in Quantitative Analyses.
 
