--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ social-linkedin: philloatman
 social-email: loatmanp@gmail.com
 
 # Disqus
-discus-identifier: mr-brown # add your discus identifier
+discus-identifier: philloatman # add your discus identifier
 
 # Tracker
 analytics: # Google Analytics
