--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ social-email: loatmanp@gmail.com
 discus-identifier: MR. BROWN # add your discus identifier
 
 # Tracker
-analytics: G-PWVCWHXKL0 # Google Analytics
+analytics: UA-216000159-1 # Google Analytics
 
 # Build Settings
 markdown: kramdown
