--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # this means to ignore newlines until "baseurl:"
 permalink: ':title/'
 baseurl: "https://philloatman.com/" # the subpath of your site, e.g. /blog
 url: "https://philloatman.com" # the base hostname & protocol for your site, e.g. http://example.com
-site-twitter: #if your site has a twitter account, enter it here
+site-twitter: philliploatman #if your site has a twitter account, enter it here
 
 # Author Settings
 author: Phil Loatman, PhD # add your name
