--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ site-twitter: philliploatman #if your site has a twitter account, enter it here
 
 # Author Settings
 author: Phil Loatman, PhD # add your name
-author-img: linkedin_pic.jpg # add your photo
+author-img: 144by144.png # add your photo
 about-author: I am currently a Senior Data Scientist for Lincoln Financial Group working within financial management. My research interests include cognitive science, judgment and decision making, experimental & behavioral economics, quantitative finance, and computational modeling. I have a PhD in Cognitive Science from Stony Brook University with advanced certification in Quantitative Analyses.
 
  # add description
