--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ about-author: I am currently a Senior Data Scientist for Lincoln Financial Group
 social-twitter: philliploatman
 social-github: LoatmanP # add your Github handle
 social-linkedin: philloatman
-social-email: loatmanp@gmail.com
+social-email: info@philloatman.com
 
 # Disqus
 discus-identifier: MR. BROWN # add your discus identifier
