--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ social-linkedin: philloatman
 social-email: info@philloatman.com
 
 # Disqus
-discus-identifier: mr-brown # add your discus identifier
+discus-identifier: philloatman # add your discus identifier
 
 # Tracker
 analytics: UA-216000159-1 # Google Analytics
