--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ about-author: I am currently a Senior Data Scientist, Financial Management for L
  # add description
 social-twitter: philliploatman
 social-github: LoatmanP # add your Github handle
-social-linkedin: philloatman
+social-linkedin: 
 social-email: info@philloatman.com
 
 # Disqus
