--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ author-img: 144by144.png # add your photo
 about-author: I am currently a Senior Data Scientist, Financial Management for Lincoln Financial Group. My research interests include cognitive science, judgment and decision making, experimental & behavioral economics, quantitative finance, and computational modeling. I have a PhD in Cognitive Science from Stony Brook University with advanced certification in Quantitative Analyses.
 
  # add description
-social-twitter: philliploatman
+social-twitter: philloatman
 social-github: LoatmanP # add your Github handle
-social-linkedin: 
+social-linkedin: philloatman
 social-email: info@philloatman.com
 
 # Disqus
