--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+![Leetcode Stats](https://leetcard.jacoblin.cool/JacobLinCool?theme=forest)
 title: Phil Loatman, PhD
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
